<resources>
    <string name="app_name">Hospital System</string>
    <string name="welcome_to_this_application">Welcome to this Application</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an Account? Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="doctor_registration">Doctor Registration</string>
    <string name="patient_registration">Patient Registration</string>
    <string name="select_one">Select one</string>
    <string name="admin_login">Admin Login</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="sign_in_now">Sign in Now</string>
    <string name="register_now">Register Now</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>

    <string-array name="timeframes">
        <item>Select time you are available</item>
        <item>07-09 AM</item>
        <item>10-12 AM</item>
        <item>02-04 PM</item>
        <item>06-08 PM</item>
    </string-array>

    <string-array name="departments">
        <item>Select department</item>
        <item>Cardiologist</item>
        <item>Dentist</item>
        <item>Gynaecologist</item>
        <item>Psychiatrists</item>
        <item>Veterinarian</item>
        <item>Oncologist</item>
        <item>Neurologist</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>