<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".SelectRegistrationActivity">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/selectreg"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_height="300dp"/>

    <TextView
        android:id="@+id/title2"
        android:text="Select One>>"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:gravity="center"/>


    <Button
        android:id="@+id/patientReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patient_registration"
        android:textSize="15sp"
        android:elevation="5dp"
        android:fontFamily="@font/alata"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:backgroundTint="@color/orange"/>

    <Button
        android:id="@+id/doctorReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_registration"
        android:textSize="15sp"
        android:elevation="5dp"
        android:fontFamily="@font/alata"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:backgroundTint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="15sp"/>

</LinearLayout>