<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_marginTop="30dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/doctor" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="Welcome to DocCare"
            android:textColor="#FF5722"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Login to Continue"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:hint="Enter Your Phone Number"
                    android:inputType="phone"
                    android:textColor="#000"
                    android:textColorHint="#000"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/TextInputLayoutStyle"
                app:boxStrokeColor="#000"
                app:hintTextAppearance="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textColorHint="#000"/>


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            android:layout_marginTop="5dp"
            android:text="Forget Password?"
            android:layout_gravity="end"
            android:textSize="10sp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/orange"
            android:text="@string/sign_in_now"
            android:textAllCaps="false"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/loginPageQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register"
            android:textAllCaps="false"
            android:onClick="FirstClick"
            android:textColor="#000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/admin_login"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="15sp" />


    </LinearLayout>




</ScrollView>