<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">



        <TextView
            android:id="@+id/title"
            android:text="DOCTOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/orange"
            android:fontFamily="@font/alata"/>

        <TextView
            android:id="@+id/title2"
            android:text="REGISTRATION"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="#000"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/alata"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ProfileImage"
            app:civ_border_width="5dp"
            android:layout_gravity="center"
            app:civ_border_color="#0D89EC"
            android:layout_width="150dp"
            android:layout_marginTop="20dp"
            android:layout_height="150dp"
            android:src="@drawable/profile_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set Profile image"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationFullName"
                android:hint="Enter Your Full Name"
                android:drawableStart="@drawable/ic_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textColorHint="#000"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationIdNumber"
                android:hint="Enter Your Id Number"
                android:drawableStart="@drawable/ic_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:textColor="#000"
                android:textColorHint="#000"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationPhoneNumber"
                android:hint="Enter Your Phone Number"
                android:drawableStart="@drawable/ic_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:textColor="#000"
                android:textColorHint="#000"/>


        </com.google.android.material.textfield.TextInputLayout>
        
        <Spinner
            android:id="@+id/availabilitySpinner"
            android:layout_gravity="center"
            android:gravity="center"
            android:popupBackground="#fff"
            android:entries="@array/timeframes"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/departmentSpinner"
            android:layout_gravity="center"
            android:gravity="center"
            android:popupBackground="#fff"
            android:entries="@array/departments"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmail"
                android:hint="@string/enter_your_email_address"
                android:drawableStart="@drawable/ic_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textColorHint="#000"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#000"
            android:theme="@style/TextInputLayoutStyle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:hintTextAppearance="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:hint="@string/enter_your_password"
                android:drawableStart="@drawable/ic_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textColorHint="#000"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/regButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:backgroundTint="@color/orange"/>

        <TextView
            android:id="@+id/regPageQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account_login"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textColor="#000"
            android:gravity="center"
            android:textSize="17sp"/>


    </LinearLayout>


</ScrollView>