<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:gravity="start"
            android:text="PATIENT"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/alata"
            android:gravity="start"
            android:text="REGISTRATION"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ProfileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:baselineAligned="false"
                android:src="@drawable/profile_image"
                app:civ_border_color="#0D89EC"
                app:civ_border_width="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D3D1D1"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ProfileImage"
                app:srcCompat="@drawable/ic_camera" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Choose Gender"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/RadioButtonStyle"
                android:text="Male"/>

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/RadioButtonStyle"
                android:text="Female"/>

            <RadioButton
                android:id="@+id/others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/RadioButtonStyle"
                android:text="Other"/>

        </RadioGroup>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="#000"
            app:hintTextAppearance="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_profile"
                android:drawablePadding="10dp"
                android:hint="Enter Your Full Name"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textColorHint="#000" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="#000"
            app:hintTextAppearance="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registrationIdNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_number"
                android:drawablePadding="10dp"
                android:hint="Enter Your Id Number"
                android:inputType="number"
                android:textColor="#000"
                android:textColorHint="#000" />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="#000"
            app:hintTextAppearance="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textColorHint="#000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="#000"
            app:hintTextAppearance="@color/colorPrimary"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textColorHint="#000" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/regButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/alata"
            android:onClick="FirstClick"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/regPageQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/have_an_account_login"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="17sp" />


    </LinearLayout>


</ScrollView>